@@ -34,6 +34,7 @@
   - Add extras_dir parameter to override extras directory. BZ #953998
   - Fix PDF ignoring cover logo. BZ #974353
   - Add trans_drop action to freeze source language for translation. BZ #887707
+  - Fix empty pot files not being deleted. BZ #961413
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
